--- a/src/Mod03-WebApplications.HttpPipelineWebApp/public/Default.html
+++ b/src/Mod03-WebApplications.HttpPipelineWebApp/public/Default.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+    <p>
+        Public :)<br />
+    </p>
     <table>
       <!--<tr> 
         <td>
@@ -32,9 +35,9 @@
       </tr>-->
       
       <tr> 
-        <td>
+ <!--       <td>
           <div>Css Resized (autox300)</div>
-          <img style="height: 300px;width: auto" src="images/uwwp 02.jpg"  />
+          <img style="height: 300px;width: auto" src="../images/uwwp 02.jpg"  />
         </td>
         <td>
           <div>Handler Resized (100x300)</div>
@@ -43,7 +46,7 @@
         <td>
           <div>Handler Resized (300x300)</div>
           <img id="Img7" src="getWmImg?ImageId=02&Width=300&Height=300"  />
-        </td>
+        </td>-->
         <td>
           <div>Handler Resized (300x100)</div>
           <img id="Img8" src="getWmImg?ImageId=02&Width=300&Height=100"  />
