--- a/src/Mod03-WebApplications.HttpPipelineWebApp/public/Login.html
+++ b/src/Mod03-WebApplications.HttpPipelineWebApp/public/Login.html
@@ -28,11 +28,11 @@
                 Please enter your user name and password. <a href="/Account/Register">Register</a>
                 if you don't have an account.
             </p>
-            <form action="/LogOn" method="post">
+            <form action="/public/LogOn" method="post">
             <div>
                 <fieldset>
                     <legend>Account Information</legend>
-                    <img src="Content/members-login-right.jpg" />
+                    <img src="../Content/members-login-right.jpg" />
                     <div class="login-form">
                         <div class="editor-label">
                             <label for="UserName">
@@ -62,7 +62,7 @@
                                 Remember me?</label>
                         </div>
                         <p>
-                            <input type="image" src="Content/button-login.jpg" />
+                            <input type="image" src="../Content/button-login.jpg" />
                         </p>
                     </div>
                 </fieldset>
